--- a/sure-deploy.opam
+++ b/sure-deploy.opam
@@ -10,6 +10,7 @@ depends: [
   "async" {>= "v0.10" & < "v0.11"}
   "ppx_deriving_yojson" {>= "3.1"}
   "jbuilder" {build}
+  "menhir" {build}
   "cohttp-async"
   "yaml"
 ]
