Migrate to dune 1.0 syntax

--- a/sure-deploy.opam
+++ b/sure-deploy.opam
@@ -4,12 +4,12 @@ author: "Marek Kubica <mku@issuu.com>"
 homepage: "https://github.com/issuu/sure-deploy"
 dev-repo: "https://github.com/issuu/sure-deploy.git"
 bug-reports: "https://github.com/issuu/sure-deploy/issues"
-build: [["jbuilder" "build" "-p" name "-j" jobs]]
+build: [["dune" "build" "-p" name "-j" jobs]]
 depends: [
   "core" {>= "v0.10" & < "v0.11"}
   "async" {>= "v0.10" & < "v0.11"}
   "ppx_deriving_yojson" {>= "3.1"}
-  "jbuilder" {build}
+  "dune" {build}
   "cohttp-async"
   "yaml"
 ]
