--- a/sure-deploy.opam
+++ b/sure-deploy.opam
@@ -8,7 +8,7 @@ build: [["dune" "build" "-p" name "-j" jobs]]
 depends: [
   "core" {>= "v0.11" & < "v0.12"}
   "async" {>= "v0.11" & < "v0.12"}
-  "ppx_deriving_yojson" {>= "3.1"}
+  "ppx_deriving_yojson" {>= "3.3" & < "4.0"}
   "dune" {build}
   "cohttp-async"
   "yaml"
