--- a/sure-deploy.opam
+++ b/sure-deploy.opam
@@ -9,7 +9,7 @@ depends: [
   "core" {>= "v0.11" & < "v0.12"}
   "async" {>= "v0.11" & < "v0.12"}
   "ppx_deriving_yojson" {>= "3.3" & < "4.0"}
-  "dune" {build}
+  "dune" {build & > "1.4"}
   "cohttp-async"
   "yaml"
 ]
