--- a/src/lib/dune
+++ b/src/lib/dune
@@ -1,4 +1,6 @@
 (library
  (name lib)
- (libraries core async cohttp-async yojson ppx_deriving_yojson.runtime yaml variable)
- (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_let)))
+ (libraries core async cohttp-async yojson ppx_deriving_yojson.runtime yaml
+   variable)
+ (preprocess
+  (pps ppx_deriving.eq ppx_deriving_yojson ppx_let)))
