--- a/src/lib/dune
+++ b/src/lib/dune
@@ -2,5 +2,6 @@
  (name lib)
  (libraries core async cohttp-async yojson ppx_deriving_yojson.runtime yaml
    variable)
+ (inline_tests)
  (preprocess
-  (pps ppx_deriving.eq ppx_deriving_yojson ppx_let)))
+  (pps ppx_deriving.eq ppx_deriving_yojson ppx_let ppx_inline_test)))
